src/components/PokemonContainer/PokemonContainer.module.scss
.dexId {
  grid-area: header;

  padding: 0 0.2rem;
  border-radius: 4px;
  background-color: var(--color-fg-strong);
  color: var(--color-bg);
  font-weight: 800;
  font-size: 1rem;
}

.enName {
  grid-area: mainBottom;
  justify-self: center;

  margin: 0;
  padding: 0;
  text-transform: capitalize;
}

.jpName {
  grid-area: mainTopLeft;
  justify-self: center;
  align-self: center;

  color: var(--color-border-light);
  font-weight: bold;
  font-size: 1.5rem;
  writing-mode: vertical-rl;
  text-orientation: upright;
}

.artwork {
  grid-area: mainTopRight;
}

.types {
  grid-area: footer;
  justify-self: center;

  display: flex;
  column-gap: 0.4rem;
}

.typeChips {
  border: 1px solid var(--color-border-light);
  border-radius: 4px;
  text-transform: uppercase;
  padding: 0.2rem 0.3rem;
  color: var(--color-fg-light);
  background-color: var(--color-bg);
}

.container {
  display: grid;
  grid-template-columns: auto auto;
  grid-template-rows: auto;
  grid-template-areas:
    'header .'
    'mainTopLeft mainTopRight'
    'mainBottom mainBottom'
    'footer footer';
  row-gap: 0.5rem;

  &:hover {
    cursor: grab;
  }
}

.containerDisabled {
  @extend .container;
  opacity: 0.5;

  &:hover {
    cursor: default;
  }
}

